syntax = "proto3";
package lavanet.lava.conflict;

// this line is used by starport scaffolding # proto/tx/import
import "cosmos/base/v1beta1/coin.proto";
import "conflict/conflict_data.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/lavanet/lava/x/conflict/types";


// Msg defines the Msg service.
service Msg {
      rpc Detection(MsgDetection) returns (MsgDetectionResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

// TODO:: change coin type to another proto (define proto in another file int this directory)
message MsgDetection {
  string creator = 1;
  FinalizationConflict finalizationConflict = 2; 
  ResponseConflict responseConflict = 3;
  FinalizationConflict sameProviderConflict = 4;
}

message MsgDetectionResponse {
}

// this line is used by starport scaffolding # proto/tx/message