syntax = "proto3";
package lavanet.lava.conflict;

option go_package = "github.com/lavanet/lava/x/conflict/types";
import "gogoproto/gogo.proto";
import "lavanet/lava/pairing/relay.proto";


message ResponseConflict { 
    ConflictRelayData conflictRelayData0 = 1;
    ConflictRelayData conflictRelayData1 =2;
}

message ConflictRelayData {
    lavanet.lava.pairing.RelayRequest request = 1;
    reserved 2;
    ReplyMetadata reply= 3;
}

message ReplyMetadata {
    bytes hash_all_data_hash = 1 ;
    bytes sig = 2;
    int64 latest_block = 3;
    bytes finalized_blocks_hashes = 4;
    bytes sig_blocks = 5; 
}

message FinalizationConflict {
    RelayFinalization relayReply0 = 1;
    RelayFinalization relayReply1 = 2;
}

message RelayFinalization {
    bytes finalized_blocks_hashes = 1; // Used for validation of block hashes
    int64 block_distance_to_finalization = 2; // Used for validation of finalization blocks
    int64 latest_block = 3; // Used for validation finalization blocks
    int64 epoch = 4; // Used for pairing validation
    string spec_id = 5; // Used for pairing validation
    string consumer_address = 6;
    bytes sig = 7;
}